Leader elector (#83)
* Forenkle lokal kjøring

* Sette ekst-ref på alle avtaleversjoner

* Flyttet wm mappingfiler under test

* Opprettet en map med avtaler som populeres med JPid-er eller null

* Test m flere pods

* Test m min 2 replikas

* Sjekker leaderPod status før polling

* Byggefix

* lagt til lokal prop

* Ekst-ref på alle avtaleversjoner. feilhåndtering + test av 409 response

* Fjernet leader-election kode

* Revert "Fjernet leader-election kode"

This reverts commit f9da15c2

* Revert "Fjernet leader-election kode"

This reverts commit f9da15c2

* Mer leader-election kode

* Logge leader-election

* Endre LE url

* Endre LE url i props

* Hardkode LE url

* Header med mediatype på LE kall

* Header med mer mediatype på LE kall

* Debug LE kall

* LE endre MediaType

* LE fiks på MediaType

* Rydding